Changed the path directory to adapt to diffrent local machines

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -60,7 +60,7 @@
     "#read the data and assign it to variable data\n",
     "#pass the keyword argument parse_date to the Date Column - this will convert the column into a datetime variable\n",
     "#read -1 as null values using the na_values keyword argument\n",
-    "data = pd.read_csv(r'C:\\Users\\Smart\\Desktop\\NoteBooks\\HDSC_Project\\dataset\\UK_Traffic_Accidents_2015.csv',\n",
+    "data = pd.read_csv(r'.\\dataset\\UK_Traffic_Accidents_2015.csv',\n",
     "                  parse_dates = ['Date'], index_col='Date',\n",
     "                  na_values=-1)\n"
    ]
@@ -691,7 +691,7 @@
     "})\n",
     "\n",
     "#map carriageway\n",
-    "sub_path = r'C:\\Users\\Smart\\Desktop\\myGit\\CatBoost-Road-Accident-2015\\data_understanding_ds\\variables'\n",
+    "sub_path = r'.\\data_understanding_ds\\variables'\n",
     "carriageway_hazards = pd.read_csv(sub_path + '\\Carriageway_Hazards.txt')\n",
     "data['Carriageway_Hazards'] = data['Carriageway_Hazards'].map({\n",
     "        0: 'None', 1: 'Vehicle load on road', 2: 'Other object on road',\n",
@@ -761,7 +761,7 @@
     "     -1: np.nan})\n",
     "\n",
     "#local_authority_district\n",
-    "sub_path = r'C:\\Users\\Smart\\Desktop\\myGit\\CatBoost-Road-Accident-2015\\data_understanding_ds\\variables'\n",
+    "sub_path = r'.\\data_understanding_ds\\variables'\n",
     "local_authority_district = pd.read_csv(sub_path + '\\Local_Authority_District.csv')\n",
     "data['Local_Authority_(District)'] = data['Local_Authority_(District)'].map(local_authority_district.set_index('code').to_dict()['label'])\n",
     "\n",
@@ -1302,7 +1302,7 @@
    "outputs": [],
    "source": [
     "#using the pandas to_csv function\n",
-    "data.to_csv(r'C:\\Users\\Smart\\Desktop\\myGit\\CatBoost-Road-Accident-2015\\dataset\\cleaned_data.csv')\n",
+    "data.to_csv(r'.\\dataset\\cleaned_data.csv')\n",
     "    "
    ]
   }
