--- a/data_understanding.ipynb
+++ b/data_understanding.ipynb
@@ -20,7 +20,7 @@
     "### import module\n",
     "import pandas as pd\n",
     "\n",
-    "sub_path = r'C:\\Users\\Smart\\Desktop\\myGit\\CatBoost-Road-Accident-2015\\data_understanding_ds\\variables'\n",
+    "sub_path = r'.\\data_understanding_ds\\variables'\n",
     "police_force =  pd.read_csv(sub_path +'\\Police_Force.csv')\n",
     "accident_severity =  pd.read_csv(sub_path + '\\Accident_Severity.csv')\n",
     "local_authority_district =  pd.read_csv(sub_path + '\\Local_Authority_District.csv')\n",
